--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@font-face {
+  src:
+    local('Pretendard'),
+    url('/fonts/PretendardVariable.woff2') format('woff2');
+  font-family: 'Pretendard';
+  font-display: swap;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Pretendard, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,8 +32,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
