--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,19 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  height: 100%;
+  zoom: 1; /* 기본 줌 설정 */
+  overflow: hidden;
+}
+
 body {
   margin: 0;
-  /* display: flex; */
-  /* place-items: center; */
+  display: block;
+  height: 100%;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
