--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,11 @@ body {
   overflow: hidden;
 }
 
+input,
+textarea {
+  font-family: Pretendard, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
